# oria-starter

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
api/: Cargo.toml  README.md
api/requests/: auth.http  http-client.env.json  users.http
api/src/: main.rs
api/src/utils/: api_state.rs  mod.rs
auth/: Cargo.toml  README.md
auth/src/: auth_router_builder.rs  lib.rs
auth/src/controller/: create_credentials.rs  login.rs  mod.rs  refresh_tokens.rs
auth/src/datastore/: mod.rs
auth/src/datastore/memory/: memory_driver.rs  mod.rs
auth/src/datastore/mongo/: mod.rs  tokens.rs  users.rs
auth/src/entities/: error.rs  mod.rs
auth/src/layer/: claims.rs
auth/src/services/: create_credentials.rs  get_credentials_from_username.rs  is_valid_credentials.rs  mod.rs  tokens.rs
auth/src/utils/: auth_claims.rs  generate_token.rs  mod.rs  settings.rs  validate_token.rs
auth/src/views/: error_response.rs  mod.rs  payload.rs  response.rs
docs/: README.md
docs/user_management/: subscribe.md
user/: Cargo.toml  README.md
user/src/: lib.rs  user_router_builder.rs
user/src/controller/: add_user.rs  get_own_profile.rs  mod.rs
user/src/datastore/: mod.rs
user/src/datastore/mongo/: mod.rs
user/src/entities/: error.rs  user.rs
user/src/services/: add_user.rs  get_user.rs  mod.rs
user/src/views/: mod.rs  response.rs  user_payload.rs  username_password_payload.rs
