[package]
name = "auth-module"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
once_cell = "1.19.0"
mongodb = { version = "3.0.1", features = ["sync"] }
pasetors = { version = "0.6.8", features = ["std", "v4"] }
chrono = "0.4.38"
rand = "0.8.5"
tokio = "1.38.0"
uuid = "1.8.0"
futures = "0.3.30"
thiserror = "1.0.61"
pbkdf2 = "0.11.0"
futures-util = "0.3.31"
tower = "0.5.2"
hyper = "1.5.1"

[dev-dependencies]
base64 = "0.22.1"
fake = { version = "2.9.2", features = ["derive"] }
mockall = "0.13.0"
serde_test = "1.0.176"
