[package]
name = "user-module"
version = "0.1.0"
edition = "2021"

[dependencies]
auth-module = { path = "../auth", features = [] }
axum = { version = "0.8.1", features = ["macros"], optional = true }
axum-extra = { version = "0.10.0", features = ["typed-header"], optional = true }
mongodb = "3.0.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "2.0.7"
tokio = "1.42.0"

[features]
axum_router = ["dep:axum", "dep:axum-extra"]

[dev-dependencies]
fake = { version = "3.1.0", features = ["derive", "dummy"] }
mockall = "0.13.0"
